--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,3 +4,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: deeppink;
 }
+#cabecera {
+   background: #33A;
+   box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+   color: white;
+   font-weight: bold;
+   margin: 0;
+   padding: 0.5em; 
+}
