--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,3 +4,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: deeppink;
 }
+
+
+#container {
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#post
+{
+    padding: 1em;
+}
