--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,10 @@
 body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: deeppink;
+    color:#333;
+    padding: 0;
+    margin: 0;
+    font-size: 16px;
 }
 
 
