--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,6 @@ body {
     font-size: 16px;
 }
 
-
 #container {
     width: 70%;
     padding: 0;
@@ -17,8 +16,11 @@ body {
     margin: 0 auto;
 }
 
-#post
-{
+#container h1 {
+    font-size: 20px;
+}
+
+#post {
     padding: 1em;
 }
 
@@ -30,4 +32,10 @@ body {
    margin: 0;
    padding: 0.5em; 
 
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
 }
